Implemented tracks grouped by types. Unit tests. Documentation and readme updated.
